# devops-tui

./: Cargo.toml  Plan.md  Ratatui.md  Readme.md
src/: lib.rs  main.rs
src/tui/: main_render.rs  mod.rs
