[package]
name = "devops-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "3.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
ratatui = "0.30.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
tokio = { version = "1.51.1", features = ["full"] }
